[tool.poetry]
name = "apiary-jobs"
version = "0.1.0"
description = "Apiary jobs management microservice."
authors = ["PiloeGAO <leonumerique@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
